charts/coco-supported/hello-openshift/templates/standard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: standard
  labels:
    app: standard
spec:
  containers:
    - name: hello-openshift
      image: quay.io/openshift/origin-hello-openshift
      ports:
        - containerPort: 8888
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1001
        capabilities:
          drop:
            - ALL
        seccompProfile:
          type: RuntimeDefault
