charts/coco-supported/hello-openshift/templates/secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: secure
  sessionAffinity: None
  type: ClusterIP
