charts/coco-supported/hello-openshift/templates/standard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: standard
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: standard
  sessionAffinity: None
  type: ClusterIP
