charts/coco-supported/hello-openshift/templates/standard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: standard
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: standard
    weight: 100
  wildcardPolicy: None
